# disquoter

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json
config/: custom-environment-variables.yml  default.yml
disquoter/: BUILD.bazel  disquoter.ts  main.ts
patches/: discord.js+11.5.1.patch
